@@ -169,7 +169,8 @@
                         <legend class="caution-legend">Paths</legend>
                         <label for="config-zookeeper-install-dir">ZooKeeper Install Dir</label><input type="text" id="config-zookeeper-install-dir" name="config-zookeeper-install-dir" size="60" title="The directory where the ZooKeeper server is installed">
                             <button id="config-zookeeper-install-dir-help-button">Read Me</button><br clear="all"/>
-                        <label for="config-zookeeper-data-dir">ZooKeeper Data Dir</label><input type="text" id="config-zookeeper-data-dir" name="config-zookeeper-data-dir" size="60" title="The directory where the ZooKeeper data is stored"><br clear="all"/>
+                        <label for="config-zookeeper-snapshot-dir">ZooKeeper Snapshot Dir</label><input type="text" id="config-zookeeper-snapshot-dir" name="snapshot-zookeeper-snapshot-dir" size="60" title="The directory where the ZooKeeper snapshot data is stored"><br clear="all"/>
+                        <label for="config-zookeeper-log-dir">ZooKeeper Transaction Dir</label><input type="text" id="config-zookeeper-log-dir" name="config-zookeeper-log-dir" size="60" title="The directory where the ZooKeeper transaction log data is stored. Leave blank to use the ZooKeeper Snapshot Dir"><br clear="all"/>
                     </fieldset>
 
                     <fieldset class="caution-fieldset">
