@@ -33,6 +33,9 @@ Off, the button is "Stop" if the instance is running and "Start" if the instance
 * Issue 61: The "Additional Config" section should retain the order that it was entered instead of
 being alphabetized.
 
+* Issue 59: Support a separate Transaction Log directory in the config. It can be blank and will
+default to the Snapshot directory.
+
 1.2.5 - August 2, 2012
 ======================
 * Various dependency version changes needed for internal Netflix compatibility.
